--- a/mop/mop.csproj
+++ b/mop/mop.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Pages\addingPages\AddOrderPage.xaml.cs">
       <DependentUpon>AddOrderPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\editingPages\EditOrderPage.xaml.cs">
+      <DependentUpon>EditOrderPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\EditBrigade.xaml.cs">
       <DependentUpon>EditBrigade.xaml</DependentUpon>
     </Compile>
@@ -179,6 +182,10 @@
     <Page Include="Pages\ClientsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\editingPages\EditOrderPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\EditBrigade.xaml">
       <SubType>Designer</SubType>
