--- a/mop/packages.config
+++ b/mop/packages.config
@@ -5,4 +5,5 @@
   <package id="MaterialDesignColors" version="3.0.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
+  <package id="WpfAnimatedGif" version="2.0.2" targetFramework="net472" />
 </packages>
