--- a/mop/mop.csproj
+++ b/mop/mop.csproj
@@ -117,6 +117,7 @@
     <Compile Include="DB\Orders.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DB\Partials\Address.cs" />
     <Compile Include="DB\Posts.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -162,6 +163,7 @@
     <Compile Include="Pages\RequestsPage.xaml.cs">
       <DependentUpon>RequestsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DB\Partials\Orders.cs" />
     <Compile Include="Questions\QW.xaml.cs">
       <DependentUpon>QW.xaml</DependentUpon>
     </Compile>
